____________________________________________________________________________________________________
BUG x.x unreleased

CHANGES

New Features:

Improvements:

- Scoreboard
	Refuses to Talk now works when BULL is not installed
	Added the ability to select a Civilization's 'short' description (e.g. "English Empire")
- Foreign Advisor (F4)
	TECHS: Added a status column that shows WAR or Forced Peace with an AI.  Shows 'refuses to talk' [BULL]
- Religion Advisor (F7)
	Shows new religions and types of religious buildings/units from mods
	Added johny smith's scrolling panel for mods with more than seven religions
	Added option to limit the religions shown in the top area to only those that are founded or available for conversion
- MapFinder
	Added ALT + CTRL + SHIFT + G to stop
	Added separate Save path

Bug Fixes:

- BUFFY and Single-Player BUG can coexist; set NoCustomAssets to 1 in BUFFY's INI file
- Main Interface
	Moved the Tech text down 2 pixels so that it now lines up with the GG and GP bars
	Era Text and Great Person Bar hidden in Hide Interface and WorldBuilder modes
- City Screen
	Anger Counter hidden for foreign cities because you cannot see whip/draft button hovers
- Customizable Domestic Advisor (F1)
	Culture levels under No Espionage are now correct
- Technology Advisor (F6)
	Great Person Bulbed Techs are reset when a game is started or loaded
- Info Screen (F9)
	Projects List
		Hover shows project instead of building; click goes to correct Civilopedia entry
		Completed projects no longer show an invalid date or city name
- MapFinder
	Status panel title displays correctly
- Unit Naming
	Default naming convention matches new unit counting codes
- Logger
	Suppresses the nationality of rival Privateers


MODDING

New Features:

- DiplomacyUtil
	Added canContact() and isWillingToTalk()
- ReligionUtil
	Makes adding religions and new types of religious buildings/units to the Religion Advisor a snap

Improvements:

- BugGameUtils